Publishing to GH pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "memory-game",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://Metrollied.github.io/cv-app/",
+	"homepage": "https://Metrollied.github.io/memory-game/",
 	"dependencies": {
 		"@nastyox/rando.js": "^2.0.5",
 		"@testing-library/jest-dom": "^5.16.2",
@@ -38,5 +38,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^3.2.3"
 	}
 }
